<resources>
    <string name="app_name">Just Kotlin</string>
    <string name="quantity">Quantity</string>
    <string name="order_button">Order</string>
    <string name="order_summary">Order summary</string>
    <string name="clear">Clear</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="name">Name</string>
</resources>