<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.justkotlin.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"/>

            <TextView
                style="@style/TextView"
                android:text="@string/toppings" />

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                style="@style/Checkbox"
                android:onClick="@{(view) -> viewModel.addWhippedCreamTopping()}"
                android:text="@string/whipped_cream" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                style="@style/Checkbox"
                android:onClick="@{(view) -> viewModel.addChocolateTopping()}"
                android:text="@string/chocolate" />

            <TextView
                style="@style/TextView"
                android:layout_marginBottom="16dp"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_decrement"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{(view) -> viewModel.decreaseQuantity()}"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/number_quantity"
                    style="@style/TextView"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/button_increment"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:onClick="@{(view) -> viewModel.increaseQuantity()}"
                    android:text="@string/plus" />

            </LinearLayout>

            <TextView
                style="@style/TextView"
                android:layout_marginBottom="16dp"
                android:text="@string/order_summary" />

            <TextView
                android:id="@+id/price_text_view"
                style="@style/TextView"
                android:layout_marginBottom="16dp"
                android:text="@string/_0" />

            <Button
                android:id="@+id/order_button"
                style="@style/Button"
                android:onClick="@{(view) -> viewModel.createOrder()}"
                android:text="@string/order_button" />

            <Button
                android:id="@+id/clear_button"
                style="@style/Button"
                android:onClick="@{(view) -> viewModel.clearOrder()}"
                android:text="@string/clear" />

        </LinearLayout>
    </ScrollView>
</layout>